Fixed images on smaller screens

--- a/less/main.less
+++ b/less/main.less
@@ -23,6 +23,10 @@
     color: #fff;
 }
 
+img {
+    max-width: 100%;
+}
+
 a {
     color: @linkColor;
     text-decoration: none;
